# pytorch-cpu-runtime-optimization

./: .gitignore  Dockerfile  README.md  run.ps1  run_stack.sh
src/: CMakeLists.txt  build_and_execute.sh  model_generation_main.py  pytorch_main.cc
